seaqt/QtMultimedia/gen_qmediaservice.h

class QMediaControl;
class QMediaService;
class QMetaObject;
typedef struct QMediaControl QMediaControl;
typedef struct QMediaService QMediaService;
typedef struct QMetaObject QMetaObject;
QMetaObject* QMediaService_metaObject(const QMediaService* self);
void* QMediaService_metacast(QMediaService* self, const char* param1);
struct miqt_string QMediaService_tr(const char* s);
struct miqt_string QMediaService_trUtf8(const char* s);
QMediaControl* QMediaService_requestControl(QMediaService* self, const char* name);
void QMediaService_releaseControl(QMediaService* self, QMediaControl* control);
struct miqt_string QMediaService_tr2(const char* s, const char* c);
struct miqt_string QMediaService_tr3(const char* s, const char* c, int n);
struct miqt_string QMediaService_trUtf82(const char* s, const char* c);
struct miqt_string QMediaService_trUtf83(const char* s, const char* c, int n);
void QMediaService_delete(QMediaService* self);